--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ckeditor/ckeditor5-build-classic": "^11.0.1",
     "@ckeditor/ckeditor5-react": "^1.0.0-beta.1",
     "ckeditor": "^4.10.0",
+    "classnames": "^2.2.6",
     "connect-multiparty": "^2.1.1",
     "cookie-parser": "^1.4.3",
     "crypto": "^1.0.1",
@@ -19,8 +20,12 @@
     "pg": "^7.4.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-tag-autocomplete": "^5.7.1",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "sequelize": "^4.38.0",
     "sqlite3": "^4.0.2"
   },
